--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.1",
     "fs": "*",
     "mongodb": "^3.2.7",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "socket.io": "^4.2.0"
   },
   "scripts": {
     "start": "set NODE_ENV=development && nodemon server.js",
