--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.1",
     "fs": "*",
     "mongodb": "^3.2.7",
+    "nodemon": "^2.0.16",
     "require": "^2.4.20",
     "socket.io": "^4.2.0"
   },
