--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "redux-thunk": "^2.4.1",
     "scss": "^0.2.4",
     "select": "^1.1.2",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
