--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@googlemaps/react-wrapper": "^1.1.33",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
@@ -16,9 +17,13 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/react-leaflet": "^2.8.2",
+    "antd": "^4.20.5",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
+    "chart.js": "^3.7.1",
+    "faker": "^6.6.6",
     "font-awesome": "^4.7.0",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "node-scss": "^7.0.3",
     "react": "^18.1.0",
