--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
     "faker": "^6.6.6",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "google-maps-react": "^2.0.6",
     "node-sass": "^7.0.1",
     "node-scss": "^7.0.3",
     "react": "^18.1.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.1",
